--- a/templates/grid2.html
+++ b/templates/grid2.html
@@ -8,6 +8,7 @@
 {% block content %}
 
     <main>
+        <a href="{{ url_for('Registro') }}" class="botón_registrar">Registrar usuario</a>
         <div class="container_grid">
 
             <div class="row" style="background-color:beige;"><!--fila-->
