--- a/static/eventoestilo.css
+++ b/static/eventoestilo.css
@@ -1,58 +1,339 @@
-.Utilidades{
-    font-size: 20px;
-    font-family: 20px;
-}
+.contenedor_evento {
+    width: 100%;
+    height: 738px;
+    background: rgba(255,255,255,0.5);
+    opacity: 1;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    overflow: hidden;
+  }
 
-.Evento{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--secondary-color); 
-    padding: 75px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    color: white; 
-    border-radius: 20px;
-    font-size: 25px;
-    width: 80%;
-    gap: 20px;
-    border:outset;
-    border-color: black; 
-}
-
-.Ubicacion_Evento{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    background-color: var(--secondary-color);
-    width: 60%;
-    color:white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
-    padding: 40px;
-    margin: 20px;
-    border-radius: 20px;
+  .evento {
+    width: 1200px;
+    height: 650px;
+    background: rgba(154,31,31,1);
+    opacity: 1;
     position: absolute;
-    left: 20%;
-    top: 13%;
-    display: none;
-    z-index: 1000;
-    gap: 20px;      
-    height: 40%;
-    border:outset;
-    border-color: black;             
-}
+    top: 68px;
+    left: 127px;
+    border: 1px solid rgba(0,0,0,1);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+  }
+  .num_exterior {
+    width: 128px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 571px;
+    left: 543px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .municipio_alcaldia {
+    width: 172px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 437px;
+    left: 578px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .porcentaje {
+    width: 193px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 253px;
+    left: 850px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .fecha_final {
+    width: 202px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 253px;
+    left: 571px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .num_interior {
+    width: 122px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 571px;
+    left: 757px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .reunion{
+    width: 228px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 190px;
+    left: 458px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .volantes {
+    width: 228px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 170px;
+    left: 458px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .lona {
+    width: 228px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 149px;
+    left: 458px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .ingresar_cp {
+    width: 227px;
+    height: 34px;
+    background: rgba(235,235,235,0.5199999809265137);
+    opacity: 1;
+    position: absolute;
+    top: 473px;
+    left: 215px;
+    border: 2px solid rgba(255,255,255,1);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
+  }
+  .ingresar_calle {
+    width: 236px;
+    height: 46px;
+    background: rgba(235,235,235,0.5199999809265137);
+    opacity: 1;
+    position: absolute;
+    top: 586px;
+    left: 215px;
+    border: 2px solid rgba(255,255,255,1);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
+  }
+  .calle {
+    width: 47px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 552px;
+    left: 252px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .cp {
+    width: 132px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 435px;
+    left: 252px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  
+  
+  .ingresar_estado {
+    width: 190px;
+    height: 27px;
+    background: rgba(235,235,235,0.5199999809265137);
+    opacity: 1;
+    position: absolute;
+    top: 400px;
+    left: 579px;
+    border: 1px solid rgba(255,255,255,1);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px
+  }
+  .ingresar_alcaldia {
+    width: 229px;
+    height: 37px;
+    background: rgba(235,235,235,0.5199999809265137);
+    opacity: 1;
+    position: absolute;
+    top: 472px;
+    left: 567px;
+    border: 1px solid rgba(255,255,255,1);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px
+  }
+  .ingresar_num_exterior {
+    width: 154px;
+    height: 47px;
+    background: rgba(235,235,235,0.5199999809265137);
+    opacity: 1;
+    position: absolute;
+    top: 596px;
+    left: 539px;
+    border: 1px solid rgba(255,255,255,1);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px
+  }
+  .ingresar_num_interior {
+    width: 151px;
+    height: 36px;
+    background: rgba(235,235,235,0.5199999809265137);
+    opacity: 1;
+    position: absolute;
+    top: 596px;
+    left: 886px;
+    border: 1px solid rgba(255,255,255,1);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px
+  }
+  .evento2 {
+    width: 82px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 160px;
+    left: 289px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 25px;
+    opacity: 1;
+    text-align: left;
+  }
+  .ingresar_fecha_inicial {
+    width: 252px;
+    height: 32px;
+    background: rgba(235,235,235,0.5199999809265137);
+    opacity: 1;
+    position: absolute;
+    top: 284px;
+    left: 215px;
+    border: 2px solid rgba(255,255,255,1);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
+  }
+  .ingreasar_fecha_final {
+    width: 260px;
+    height: 32px;
+    background: rgba(235,235,235,0.5199999809265137);
+    opacity: 1;
+    position: absolute;
+    top: 284px;
+    left: 525px;
+    border: 2px solid rgba(255,255,255,1);
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
+  }
+  .ingresar_porcentaje {
+    width: 267px;
+    height: 52px;
+    background: rgba(235,235,235,0.5199999809265137);
+    opacity: 1;
+    position: absolute;
+    top: 284px;
+    left: 887px;
+    border: 2px solid rgba(255,255,255,1);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    
+  }
+  .fecha_inicial {
+    width: 216px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 249px;
+    left: 238px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
+  .lugar {
+    width: 68px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 350px;
+    left: 303px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 22px;
+    opacity: 1;
+    text-align: left;
+  }
+  .estado {
+    width: 66px;
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 360px;
+    left: 593px;
+    font-family: Inter;
+    font-weight: Regular;
+    font-size: 20px;
+    opacity: 1;
+    text-align: left;
+  }
 
-.contenedor{
+.seleccionar_menu{
     width: 300px;
     cursor: pointer;
     position: relative;
 }
 
-.menu_desplegable{
+.seleccionar{
     background-color: var(--secondary-color);
     padding: 20px;
     color: var(--white);
@@ -61,6 +342,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1000;
 }
 
 .porcentajes{
@@ -83,7 +365,7 @@
     transition: 3.s ease-in-out;
 }
 
-.opcion:hover{
+.opcion:hover.opcion.seleccionar{
     color: var(--primary-color);
 }
 
@@ -94,4 +376,8 @@
 
 .porcentajes::-webkit-scrollbar-thumb{
     background-color: var(--secondary-color);
+}
+
+.porcentajes.active{
+    height: 180px;
 }
