handbook forms with wtforms, app.config

--- a/templates/login.html
+++ b/templates/login.html
@@ -41,6 +41,6 @@
             </h5>
         </div>
 
-        <h3><button class="butt"><a href="{{ url_for('datosUsuario') }}">Iniciar sesion</a></button></h3>
+        <h3><button class="butt"><a href="{{ url_for('mostrarDatosU') }}">Iniciar sesion</a></button></h3>
     </main>
 {% endblock %}
