--- a/static/eventoestilo.css
+++ b/static/eventoestilo.css
@@ -1,354 +1,87 @@
-.contenedor_evento {
+.evento {
+    position: absolute;
+    top: 15%;
+    left: 18%;
+    background-color: var(--secondary-color);
+    padding: 30px;
+    color: var(--white);
+    border-radius: 30px;
+    font-size: 20px;
+    width: 70%;
+    height: 80%;
+    border: outset;
+    border-color: var(--primary-color);
+}
+
+.nombre {
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    font-size: 35px;
+}
+
+.utilidades {
+    position: absolute;
+    left: 30%;
+    top: 7%
+}
+
+.columna1 {
+    display: flex;
+    justify-content: center;
+}
+
+.fecha_inicial{
     width: 100%;
-    height: 738px;
-    background: rgba(255,255,255,0.5);
-    opacity: 1;
-    position: relative;
-    top: 0px;
-    left: 0px;
-    overflow: hidden;
-  }
+    padding: 5px;
+    display:grid;
+    color: var(--white);
+    justify-content: space-around;
+    align-content: center;   
+    padding: 6px;
+}
 
-  .evento {
-    width: 1200px;
-    height: 650px;
-    background: rgba(154,31,31,1);
-    opacity: 1;
-    position: absolute;
-    top: 68px;
-    left: 127px;
-    border: 1px solid rgba(0,0,0,1);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-  }
-  .num_exterior {
-    width: 128px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 571px;
-    left: 543px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .municipio_alcaldia {
-    width: 172px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 437px;
-    left: 578px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .porcentaje {
-    width: 193px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 253px;
-    left: 850px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .fecha_final {
-    width: 202px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 253px;
-    left: 571px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .num_interior {
-    width: 122px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 571px;
-    left: 757px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .reunion{
-    width: 228px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 190px;
-    left: 458px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .volantes {
-    width: 228px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 170px;
-    left: 458px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .lona {
-    width: 228px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 149px;
-    left: 458px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .ingresar_cp {
-    width: 227px;
-    height: 34px;
-    background: rgba(235,235,235,0.5199999809265137);
-    opacity: 1;
-    position: absolute;
-    top: 473px;
-    left: 215px;
-    border: 2px solid rgba(255,255,255,1);
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    overflow: hidden;
-  }
-  .ingresar_calle {
-    width: 236px;
-    height: 46px;
-    background: rgba(235,235,235,0.5199999809265137);
-    opacity: 1;
-    position: absolute;
-    top: 586px;
-    left: 215px;
-    border: 2px solid rgba(255,255,255,1);
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    overflow: hidden;
-  }
-  .calle {
-    width: 47px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 552px;
-    left: 252px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .cp {
-    width: 132px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 435px;
-    left: 252px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  
-  
-  .ingresar_estado {
-    width: 190px;
-    height: 27px;
-    background: rgba(235,235,235,0.5199999809265137);
-    opacity: 1;
-    position: absolute;
-    top: 400px;
-    left: 579px;
-    border: 1px solid rgba(255,255,255,1);
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px
-  }
-  .ingresar_alcaldia {
-    width: 229px;
-    height: 37px;
-    background: rgba(235,235,235,0.5199999809265137);
-    opacity: 1;
-    position: absolute;
-    top: 472px;
-    left: 567px;
-    border: 1px solid rgba(255,255,255,1);
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px
-  }
-  .ingresar_num_exterior {
-    width: 154px;
-    height: 47px;
-    background: rgba(235,235,235,0.5199999809265137);
-    opacity: 1;
-    position: absolute;
-    top: 596px;
-    left: 539px;
-    border: 1px solid rgba(255,255,255,1);
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px
-  }
-  .ingresar_num_interior {
-    width: 151px;
-    height: 36px;
-    background: rgba(235,235,235,0.5199999809265137);
-    opacity: 1;
-    position: absolute;
-    top: 596px;
-    left: 886px;
-    border: 1px solid rgba(255,255,255,1);
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px
-  }
-  .evento2 {
-    width: 82px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 160px;
-    left: 289px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 25px;
-    opacity: 1;
-    text-align: left;
-  }
-  .ingresar_fecha_inicial {
-    width: 252px;
-    height: 32px;
-    background: rgba(235,235,235,0.5199999809265137);
-    opacity: 1;
-    position: absolute;
-    top: 284px;
-    left: 215px;
-    border: 2px solid rgba(255,255,255,1);
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    overflow: hidden;
-  }
-  .ingreasar_fecha_final {
+.fecha_final{
+    width: 100%;
+    padding: 5px;
+    display:grid;
+    color:var(--white);
+    justify-content: space-around;
+    align-content: center;
+    padding: 6px;
+}
+
+.porcentajes{
+    width: 100%;
+    padding: 5px;
+    display:grid;
+    color: var(--white);
+    justify-content: space-around;
+    align-content: center;
+    padding: 6px;
+}
+
+.select_menu {
     width: 260px;
-    height: 32px;
-    background: rgba(235,235,235,0.5199999809265137);
-    opacity: 1;
-    position: absolute;
-    top: 284px;
-    left: 525px;
-    border: 2px solid rgba(255,255,255,1);
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    overflow: hidden;
-  }
-  .ingresar_porcentaje {
-    width: 267px;
-    height: 52px;
-    background: rgba(235,235,235,0.5199999809265137);
-    opacity: 1;
-    position: absolute;
-    top: 284px;
-    left: 887px;
-    border: 2px solid rgba(255,255,255,1);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    
-  }
-  .fecha_inicial {
-    width: 216px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 249px;
-    left: 238px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-  .lugar {
-    width: 68px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 350px;
-    left: 303px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 22px;
-    opacity: 1;
-    text-align: left;
-  }
-  .estado {
-    width: 66px;
-    color: rgba(255,255,255,1);
-    position: absolute;
-    top: 360px;
-    left: 593px;
-    font-family: Inter;
-    font-weight: Regular;
-    font-size: 20px;
-    opacity: 1;
-    text-align: left;
-  }
-
-.seleccionar_menu{
-    width: 300px;
     cursor: pointer;
     position: relative;
 }
 
-.seleccionar{
-    background-color: var(--secondary-color);
+.select {
+    background-color: var(--text_box-color);
     padding: 20px;
-    color: var(--white);
+    color: var(--secondary-color);
     font-weight: 500;
-    border-radius: 6px;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 1000;
 }
 
-.porcentajes{
+.options_list {
     position: absolute;
     width: 100%;
-    background-color: var(--white);
+    background-color: var(--text_box-color);
     border-radius: 6px;
     margin-top: 14px;
     padding: 0 20px;
@@ -358,26 +91,83 @@
     height: 0;
 }
 
-.opcion{
+.option {
     padding: 8px 0;
     font-weight: 500;
     font-size: 14px;
     transition: 3.s ease-in-out;
 }
 
-.opcion:hover.opcion.seleccionar{
-    color: var(--primary-color);
+.option:hover,
+.option.selected {
+    color: var(--secondary-color);
 }
 
-.porcentajes::-webkit-scrollbar{
+.options_list.active {
+    height: 150px;
+}
+
+.estados{
+    width: 100%;
+    padding: 5px;
+    display:grid;
+    color: var(--white);
+    justify-content: space-around;
+    align-content: center;
+    padding: 6px;
+}
+
+.select_menu2 {
+    width: 260px;
+    cursor: pointer;
+    position: relative;
+}
+
+.select2 {
+    background-color: var(--text_box-color);
+    padding: 20px;
+    color: var(--secondary-color);
+    font-weight: 500;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.options_list2 {
+    position: absolute;
+    width: 100%;
+    background-color: var(--text_box-color);
+    border-radius: 6px;
+    margin-top: 14px;
+    padding: 0 20px;
+    max-height: 180px;
+    overflow-y: auto;
+    transition: .4s linear .2s;
+    height: 0;
+}
+
+.option2 {
+    padding: 8px 0;
+    font-weight: 500;
+    font-size: 14px;
+    transition: 3.s ease-in-out;
+}
+
+.option2:hover,
+.option2.selected {
+    color: var(--secondary-color);
+}
+
+.option_list2::-webkit-scrollbar{
     width: 4px;
+    background-color: var(--white);
+}
+
+.option_list2::-webkit-scrollbar-thumb{
     background-color: var(--secondary-color);
 }
 
-.porcentajes::-webkit-scrollbar-thumb{
-    background-color: var(--secondary-color);
-}
-
-.porcentajes.active{
-    height: 180px;
+.options_list2.active {
+    height: 150px;
 }
