--- a/templates/grid2.html
+++ b/templates/grid2.html
@@ -43,7 +43,7 @@
             <div class="col-sm">5512145698</div>
             <div class="col-sm"> 1 </div>
             <div class="col-sm">TEFAXHAAJA569</div>
-            <div class="col-sm"><a href=""><i class="fa-solid fa-magnifying-glass"></i></i><i class="fa-solid fa-pen-to-square"></i><i class="fa-solid fa-trash"></i></a></div>
+            <div class="col-sm"><a href="{{url_for('mostrarDatosU')}}"><i class="fa-solid fa-book"></i></a><i class="fa-solid fa-magnifying-glass"></i></i><i class="fa-solid fa-pen-to-square"></i><i class="fa-solid fa-trash"></i></div>
             <!--<td><div class="eliminar" onclick="eliminarFila(this)"><i class="fas fa-trash"></i></div></td>-->
 
         </div>
@@ -57,8 +57,8 @@
             <div class="col-sm">5544778900</div>
             <div class="col-sm"> 0 </div>
             <div class="col-sm">WHASJDJSK09NA</div>
-            <div class="col-sm"><a href=""><i class="fa-solid fa-magnifying-glass"></i><i class="fa-solid fa-pen-to-square"></i><i
-                        class="fa-solid fa-trash"></i></a></div>
+            <div class="col-sm"><a href="{{url_for('mostrarDatosU')}}"><i class="fa-solid fa-book"></i></a><a href=""></a><i class="fa-solid fa-magnifying-glass"></i><i class="fa-solid fa-pen-to-square"></i><i
+                        class="fa-solid fa-trash"></i></div>
         </div>
         <div class="row">
             <div class="col-sm"> Jorgeee </div>
@@ -70,8 +70,8 @@
             <div class="col-sm">5687410239</div>
             <div class="col-sm"> 1 </div>
             <div class="col-sm">POASKIWE78QYJN</div>
-            <div class="col-sm"><a href=""><i class="fa-solid fa-magnifying-glass"></i><i class="fa-solid fa-pen-to-square"></i><i
-                        class="fa-solid fa-trash"></i></a></div>
+            <div class="col-sm"><a href="{{url_for('mostrarDatosU')}}"><i class="fa-solid fa-book"></i></a><i class="fa-solid fa-magnifying-glass"></i><i class="fa-solid fa-pen-to-square"></i><i
+                        class="fa-solid fa-trash"></i></div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
