--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -10,7 +10,7 @@
             <!-- * Bloque para iniciar sesion-->
             <section class="login">
               <h1 class="titulo">Militancia</h1>
-            <button><a href="{{ url_for('login') }}">Iniciar sesión</a></button>
+            <button><a href="{{ url_for('evento') }}">Iniciar sesión</a></button>
             </p>
             <button class="secButton">Registrarse</button>
           </section>
